--- a/palvelut.html
+++ b/palvelut.html
@@ -33,9 +33,13 @@
   <h2>Palvelut</h2>
   <ul>
     <li>Arkkitehtisuunnittelu</li>
-    <li>Muovi- ja metallihitsaukset</li>
+    <li>Pääsuunnittelu (tavanomaiset kohteet)</li>
+    <li>Konsultointi</li>
+    <li>Muovihitsaus ja muovituotteiden valmistus</li>
+    <li>Metalli korjaushitsaukset</li>
   </ul>
 </section>
+
 
 <footer>
   © 2026 AP Arch & Tech
