--- a/palvelut.html
+++ b/palvelut.html
@@ -36,7 +36,7 @@
     <li>Pääsuunnittelu (tavanomaiset kohteet)</li>
     <li>Konsultointi</li>
     <li>Muovihitsaus ja muovituotteiden valmistus</li>
-    <li>Metalli korjaushitsaukset</li>
+    <li>Metallin korjaushitsaukset</li>
   </ul>
 </section>
 
