--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
   </nav>
 
   <h1>AP Arch & Tech</h1>
-  <p>Uusi aloitusteksti: täällä kerrot yrityksestäsi lyhyesti ja tyylikkäästi.</p>
+  <p>AP Arch & Tech tarjoaa arkkitehtisuunnittelua, pääsuunnittelua ja korjaussuunnittelua sekä toteuttaa muovi- ja metallihitsaukset asiakkaan tarpeiden mukaan.</p>
 </header>
+
 
 <section>
   <h2>Esittely</h2>
