--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 <body>
 
 <header>
-  <img src="images/Näyttökuva 2023-04-25 135224" alt="Esimerkkikuva arkkitehtuurista" 
+<img src="images/arkkitehtuuri.jpg" alt="Esimerkkikuva arkkitehtuurista"
      style="width:100%; height:auto; display:block; margin-bottom:20px; border-radius:8px;">
+
 
   <nav>
     <a href="index.html">Etusivu</a> |
