--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -30,8 +30,8 @@
 <section>
   <h2>Ota yhteyttä</h2>
   <p>
-    Sähköposti: info@aparchtech.fi<br>
-    Puhelin: 040 123 4567
+    Sähköposti: ArniP.tmi@outlook.com<br>
+    Puhelin: 0407393105
   </p>
 </section>
 
