--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -32,6 +32,8 @@
   <p>
     Sähköposti: ArniP.tmi@outlook.com<br>
     Puhelin: 0407393105
+    Y-tunnus: 3587198-1<br>
+    Kotipaikkakunta: Kuopio
   </p>
 </section>
 
