--- a/palvelut.html
+++ b/palvelut.html
@@ -21,7 +21,7 @@
   <nav>
     <a href="index.html">Etusivu</a> |
     <a href="palvelut.html">Palvelut</a> |
-    <a href="projektit.html">Projektit</a> |
+    <a href="projektit.html">Portfolio</a> |
     <a href="yhteystiedot.html">Yhteystiedot</a>
   </nav>
 
