--- a/projektit.html
+++ b/projektit.html
@@ -2,7 +2,7 @@
 <html lang="fi">
 <head>
   <meta charset="UTF-8">
-  <title>AP Arch & Tech – Projektit</title>
+  <title>AP Arch & Tech – Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body { margin:0; font-family: Arial, Helvetica, sans-serif; background:#0f0f0f; color:#eaeaea; }
@@ -12,7 +12,11 @@
     h1 { font-size:2.5rem; font-weight:300; letter-spacing:1px; }
     section { padding:40px 20px; max-width:1000px; margin:auto; }
     .projects { display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px; }
-    .project { background:#1a1a1a; height:200px; display:flex; align-items:center; justify-content:center; color:#777; }
+    .project img { width:100%; height:auto; border-radius:8px; cursor:pointer; }
+    #lightbox { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:1000; }
+    #lightbox img { max-width:90%; max-height:90%; border-radius:8px; }
+    #close { position:absolute; top:20px; right:40px; font-size:3rem; color:white; cursor:pointer; }
+    #gallery-thumbnails img { width:80px; margin:5px; cursor:pointer; border-radius:4px; }
     footer { padding:40px; text-align:center; color:#777; }
   </style>
 </head>
@@ -22,25 +26,81 @@
   <nav>
     <a href="index.html">Etusivu</a> |
     <a href="palvelut.html">Palvelut</a> |
-    <a href="projektit.html">Projektit</a> |
+    <a href="projektit.html">Portfolio</a> |
     <a href="yhteystiedot.html">Yhteystiedot</a>
   </nav>
 
-  <h1>Projektit</h1>
+  <h1>Portfolio</h1>
   <p>Tässä voit esitellä referenssiprojekteja ja toteutettuja kohteita.</p>
 </header>
 
 <section>
   <div class="projects">
-    <div class="project">Projekti 1</div>
-    <div class="project">Projekti 2</div>
-    <div class="project">Projekti 3</div>
+    <!-- Projekti 1 -->
+    <div class="project" onclick="openGallery('projekti1')">
+      <img src="images/projekti1-1.jpg" alt="Projekti 1">
+    </div>
+    <!-- Projekti 2 -->
+    <div class="project" onclick="openGallery('projekti2')">
+      <img src="images/projekti2-1.jpg" alt="Projekti 2">
+    </div>
+    <!-- Projekti 3 -->
+    <div class="project" onclick="openGallery('projekti3')">
+      <img src="images/projekti3-1.jpg" alt="Projekti 3">
+    </div>
   </div>
 </section>
+
+<!-- Lightbox -->
+<div id="lightbox">
+  <span id="close" onclick="closeGallery()">×</span>
+  <img id="lightbox-img" src="">
+  <div id="gallery-thumbnails"></div>
+</div>
 
 <footer>
   © 2026 AP Arch & Tech
 </footer>
 
+<script>
+const galleries = {
+  projekti1: [
+    "images/projekti1-1.jpg",
+    "images/projekti1-2.jpg",
+    "images/projekti1-3.jpg"
+  ],
+  projekti2: [
+    "images/projekti2-1.jpg",
+    "images/projekti2-2.jpg"
+  ],
+  projekti3: [
+    "images/projekti3-1.jpg",
+    "images/projekti3-2.jpg"
+  ]
+};
+
+function openGallery(project) {
+  const lightbox = document.getElementById('lightbox');
+  const mainImg = document.getElementById('lightbox-img');
+  const thumbs = document.getElementById('gallery-thumbnails');
+  
+  lightbox.style.display = 'flex';
+  mainImg.src = galleries[project][0];
+
+  thumbs.innerHTML = '';
+  galleries[project].forEach(img => {
+    const thumb = document.createElement('img');
+    thumb.src = img;
+    thumb.onclick = () => mainImg.src = img;
+    thumbs.appendChild(thumb);
+  });
+}
+
+function closeGallery() {
+  document.getElementById('lightbox').style.display = 'none';
+}
+</script>
+
 </body>
 </html>
+
