--- a/projektit.html
+++ b/projektit.html
@@ -85,10 +85,12 @@ const galleries = {
     "images/projekti3-4.jpg"
   ],
   projekti4: [
-    "images/projekti4-1.jpg",
+    "images/projekti4-1.jpg", // pääkuva
     "images/projekti4-2.jpg",
     "images/projekti4-3.jpg",
-    "images/projekti4-4.jpg"
+    "images/projekti4-4.jpg",
+    "images/projekti4-5.jpg",
+    "images/projekti4-6.jpg" // uusi kuudes kuva
   ]
 };
 
