--- a/projektit.html
+++ b/projektit.html
@@ -5,19 +5,89 @@
   <title>AP Arch & Tech – Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { margin:0; font-family: Arial, Helvetica, sans-serif; background:#0f0f0f; color:#eaeaea; }
-    nav a { color:#eaeaea; text-decoration:none; margin:0 10px; }
-    nav a:hover { text-decoration: underline; }
-    header { text-align:center; padding:40px; }
-    h1 { font-size:2.5rem; font-weight:300; letter-spacing:1px; }
-    section { padding:40px 20px; max-width:1000px; margin:auto; }
-    .projects { display:grid; grid-template-columns:repeat(auto-fit, minmax(250px,1fr)); gap:20px; }
-    .project img { width:100%; height:auto; border-radius:8px; cursor:pointer; }
-    #lightbox { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:1000; }
-    #lightbox img { max-width:90%; max-height:90%; border-radius:8px; }
-    #close { position:absolute; top:20px; right:40px; font-size:3rem; color:white; cursor:pointer; }
-    #gallery-thumbnails img { width:80px; margin:5px; cursor:pointer; border-radius:4px; }
-    footer { padding:40px; text-align:center; color:#777; }
+    body {
+      margin:0;
+      font-family: Arial, Helvetica, sans-serif;
+      background:#0f0f0f;
+      color:#eaeaea;
+    }
+    nav a {
+      color:#eaeaea;
+      text-decoration:none;
+      margin:0 10px;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    header {
+      text-align:center;
+      padding:40px;
+    }
+    h1 {
+      font-size:2.5rem;
+      font-weight:300;
+      letter-spacing:1px;
+    }
+    section {
+      padding:40px 20px;
+      max-width:1000px;
+      margin:auto;
+    }
+    .projects {
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(250px,1fr));
+      gap:20px;
+    }
+    .project img {
+      width:100%;
+      height:auto;
+      border-radius:8px;
+      cursor:pointer;
+    }
+
+    /* Lightbox */
+    #lightbox {
+      display:none;
+      position:fixed;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      background:rgba(0,0,0,0.9);
+      display:flex;
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      z-index:1000;
+    }
+    #lightbox img {
+      max-width:90%;
+      max-height:80%;
+      border-radius:8px;
+    }
+    #close {
+      position:absolute;
+      top:20px;
+      right:40px;
+      font-size:3rem;
+      color:white;
+      cursor:pointer;
+    }
+    #gallery-thumbnails {
+      margin-top:20px;
+    }
+    #gallery-thumbnails img {
+      width:80px;
+      margin:5px;
+      cursor:pointer;
+      border-radius:4px;
+    }
+
+    footer {
+      padding:40px;
+      text-align:center;
+      color:#777;
+    }
   </style>
 </head>
 <body>
@@ -31,30 +101,32 @@
   </nav>
 
   <h1>Portfolio</h1>
-  <p>Tässä voit esitellä referenssiprojekteja ja toteutettuja kohteita.</p>
+  <p>Valikoituja projekteja ja toteutuksia.</p>
 </header>
 
 <section>
   <div class="projects">
-    <!-- Projekti 1 – vain pääkuva -->
+
+    <!-- Projekti 1 -->
     <div class="project" onclick="openGallery('projekti1')">
-      <img src="images/projekti1-1.jpg" alt="Projekti 1">
+      <img src="images/projekti1-main.jpg" alt="Projekti 1">
     </div>
 
-    <!-- Projekti 2 – pääkuva + 1 kuva lightboxissa -->
+    <!-- Projekti 2 -->
     <div class="project" onclick="openGallery('projekti2')">
-      <img src="images/projekti2-1.jpg" alt="Projekti 2">
+      <img src="images/projekti2-main.jpg" alt="Projekti 2">
     </div>
 
-    <!-- Projekti 3 – pääkuva + 3 kuvaa lightboxissa -->
+    <!-- Projekti 3 -->
     <div class="project" onclick="openGallery('projekti3')">
-      <img src="images/projekti3-1.jpg" alt="Projekti 3">
+      <img src="images/projekti3-main.jpg" alt="Projekti 3">
     </div>
 
-    <!-- Projekti 4 – pääkuva + 4 kuvaa lightboxissa (voi lisätä myöhemmin) -->
+    <!-- Projekti 4 -->
     <div class="project" onclick="openGallery('projekti4')">
-      <img src="images/projekti4-1.jpg" alt="Projekti 4">
+      <img src="images/projekti4-main.jpg" alt="Projekti 4">
     </div>
+
   </div>
 </section>
 
@@ -72,25 +144,26 @@
 <script>
 const galleries = {
   projekti1: [
-    "images/projekti1-1.jpg"
+    "images/projekti1-main.jpg"
   ],
   projekti2: [
-    "images/projekti2-1.jpg",
-    "images/projekti2-2.jpg"
+    "images/projekti2-main.jpg",
+    "images/projekti2-1.jpg"
   ],
   projekti3: [
+    "images/projekti3-main.jpg",
     "images/projekti3-1.jpg",
     "images/projekti3-2.jpg",
-    "images/projekti3-3.jpg",
-    "images/projekti3-4.jpg"
+    "images/projekti3-3.jpg"
   ],
   projekti4: [
-    "images/projekti4-1.jpg", // pääkuva
+    "images/projekti4-main.jpg",
+    "images/projekti4-1.jpg",
     "images/projekti4-2.jpg",
     "images/projekti4-3.jpg",
     "images/projekti4-4.jpg",
     "images/projekti4-5.jpg",
-    "images/projekti4-6.jpg" // uusi kuudes kuva
+    "images/projekti4-6.jpg"
   ]
 };
 
@@ -98,11 +171,11 @@ function openGallery(project) {
   const lightbox = document.getElementById('lightbox');
   const mainImg = document.getElementById('lightbox-img');
   const thumbs = document.getElementById('gallery-thumbnails');
-  
+
   lightbox.style.display = 'flex';
   mainImg.src = galleries[project][0];
-
   thumbs.innerHTML = '';
+
   galleries[project].forEach(img => {
     const thumb = document.createElement('img');
     thumb.src = img;
@@ -118,3 +191,4 @@ function closeGallery() {
 
 </body>
 </html>
+
