--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -5,41 +5,100 @@
   <title>AP Arch & Tech – Yhteystiedot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { margin:0; font-family: Arial, Helvetica, sans-serif; background:#0f0f0f; color:#eaeaea; }
-    nav a { color:#eaeaea; text-decoration:none; margin:0 10px; }
-    nav a:hover { text-decoration: underline; }
-    header { text-align:center; padding:40px; }
-    h1 { font-size:2.5rem; font-weight:300; letter-spacing:1px; }
-    section { padding:40px 20px; max-width:600px; margin:auto; }
-    footer { padding:40px; text-align:center; color:#777; }
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #0f0f0f;
+      color: #eaeaea;
+      padding: 20px;
+    }
+    nav a {
+      color: #eaeaea;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    h1 {
+      text-align: center;
+      font-size: 2.5rem;
+      font-weight: 300;
+      margin-bottom: 20px;
+    }
+    form {
+      max-width: 500px;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+    }
+    label {
+      margin-top: 15px;
+      margin-bottom: 5px;
+      font-weight: bold;
+    }
+    input, textarea {
+      padding: 10px;
+      border-radius: 5px;
+      border: none;
+      font-size: 1rem;
+      width: 100%;
+      box-sizing: border-box;
+    }
+    textarea {
+      resize: vertical;
+      min-height: 100px;
+    }
+    button {
+      margin-top: 20px;
+      padding: 12px;
+      background: #444;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    button:hover {
+      background: #666;
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <nav>
-    <a href="index.html">Etusivu</a> |
-    <a href="palvelut.html">Palvelut</a> |
-    <a href="projektit.html">Projektit</a> |
-    <a href="yhteystiedot.html">Yhteystiedot</a>
-  </nav>
+<nav>
+  <a href="index.html">Etusivu</a> |
+  <a href="palvelut.html">Palvelut</a> |
+  <a href="projektit.html">Portfolio</a> |
+  <a href="yhteystiedot.html">Yhteystiedot</a>
+</nav>
 
-  <h1>Yhteystiedot</h1>
-</header>
+<h1>Yhteystiedot</h1>
 
-<section>
-  <h2>Ota yhteyttä</h2>
-  <p>
-    Sähköposti: ArniP.tmi@outlook.com<br>
-    Puhelin: 0407393105
-    Kotipaikkakunta: Kuopio
-    Y-tunnus: 3587198-1<br>
-  </p>
-</section>
+<form action="#" method="post">
+  <label for="nimi">Nimi*</label>
+  <input type="text" id="nimi" name="nimi" required>
 
-<footer>
-  © 2026 AP Arch & Tech
-</footer>
+  <label for="email">Sähköposti*</label>
+  <input type="email" id="email" name="email" required>
+
+  <label for="puhelin">Puhelin</label>
+  <input type="tel" id="puhelin" name="puhelin">
+
+  <label for="kotipaikka">Kotipaikkakunta</label>
+  <input type="text" id="kotipaikka" name="kotipaikka" value="Kuopio">
+
+  <label for="toimialue">Toimialue</label>
+  <input type="text" id="toimialue" name="toimialue" value="Suomi">
+
+  <label for="ytunnus">Y-tunnus</label>
+  <input type="text" id="ytunnus" name="ytunnus" value="">
+
+  <label for="viesti">Viesti / Tarjouspyyntö</label>
+  <textarea id="viesti" name="viesti"></textarea>
+
+  <button type="submit">Lähetä</button>
+</form>
 
 </body>
 </html>
