--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -10,95 +10,74 @@
       font-family: Arial, Helvetica, sans-serif;
       background: #0f0f0f;
       color: #eaeaea;
+      line-height: 1.6;
       padding: 20px;
     }
+
     nav a {
       color: #eaeaea;
       text-decoration: none;
       margin: 0 10px;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
-    h1 {
+
+    header {
       text-align: center;
+      padding: 40px;
+    }
+
+    h1 {
       font-size: 2.5rem;
       font-weight: 300;
-      margin-bottom: 20px;
+      letter-spacing: 1px;
+      margin-bottom: 10px;
     }
-    form {
-      max-width: 500px;
+
+    section {
+      max-width: 600px;
       margin: auto;
-      display: flex;
-      flex-direction: column;
+      padding: 20px 0;
     }
-    label {
-      margin-top: 15px;
-      margin-bottom: 5px;
-      font-weight: bold;
+
+    section p {
+      margin: 10px 0;
     }
-    input, textarea {
-      padding: 10px;
-      border-radius: 5px;
-      border: none;
-      font-size: 1rem;
-      width: 100%;
-      box-sizing: border-box;
-    }
-    textarea {
-      resize: vertical;
-      min-height: 100px;
-    }
-    button {
-      margin-top: 20px;
-      padding: 12px;
-      background: #444;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1rem;
-    }
-    button:hover {
-      background: #666;
+
+    footer {
+      padding: 40px;
+      text-align: center;
+      color: #777;
     }
   </style>
 </head>
 <body>
 
-<nav>
-  <a href="index.html">Etusivu</a> |
-  <a href="palvelut.html">Palvelut</a> |
-  <a href="projektit.html">Portfolio</a> |
-  <a href="yhteystiedot.html">Yhteystiedot</a>
-</nav>
+<header>
+  <nav>
+    <a href="index.html">Etusivu</a> |
+    <a href="palvelut.html">Palvelut</a> |
+    <a href="projektit.html">Portfolio</a> |
+    <a href="yhteystiedot.html">Yhteystiedot</a>
+  </nav>
 
-<h1>Yhteystiedot</h1>
+  <h1>Yhteystiedot</h1>
+  <p>Ota yhteyttä AP Arch & Tech -yritykseen alla olevien tietojen avulla.</p>
+</header>
 
-<form action="#" method="post">
-  <label for="nimi">Nimi*</label>
-  <input type="text" id="nimi" name="nimi" required>
+<section>
+  <p><strong>Sähköposti:</strong> info@aparchtech.fi</p>
+  <p><strong>Puhelin:</strong> 040 123 4567</p>
+  <p><strong>Kotipaikkakunta:</strong> Kuopio</p>
+  <p><strong>Toimialue:</strong> Suomi</p>
+  <p><strong>Y-tunnus:</strong> 1234567-8</p>
+</section>
 
-  <label for="email">Sähköposti*</label>
-  <input type="email" id="email" name="email" required>
-
-  <label for="puhelin">Puhelin</label>
-  <input type="tel" id="puhelin" name="puhelin">
-
-  <label for="kotipaikka">Kotipaikkakunta</label>
-  <input type="text" id="kotipaikka" name="kotipaikka" value="Kuopio">
-
-  <label for="toimialue">Toimialue</label>
-  <input type="text" id="toimialue" name="toimialue" value="Suomi">
-
-  <label for="ytunnus">Y-tunnus</label>
-  <input type="text" id="ytunnus" name="ytunnus" value="">
-
-  <label for="viesti">Viesti / Tarjouspyyntö</label>
-  <textarea id="viesti" name="viesti"></textarea>
-
-  <button type="submit">Lähetä</button>
-</form>
+<footer>
+  © 2026 AP Arch & Tech
+</footer>
 
 </body>
 </html>
