--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -68,11 +68,11 @@
 </header>
 
 <section>
-  <p><strong>Sähköposti:</strong> info@aparchtech.fi</p>
-  <p><strong>Puhelin:</strong> 040 123 4567</p>
+  <p><strong>Sähköposti:</strong> ArniP.tmi@outlook.com</p>
+  <p><strong>Puhelin:</strong> +358407393105</p>
   <p><strong>Kotipaikkakunta:</strong> Kuopio</p>
   <p><strong>Toimialue:</strong> Suomi</p>
-  <p><strong>Y-tunnus:</strong> 1234567-8</p>
+  <p><strong>Y-tunnus:</strong> 3587198-1</p>
 </section>
 
 <footer>
