--- a/projektit.html
+++ b/projektit.html
@@ -28,6 +28,12 @@
       font-weight:300;
       letter-spacing:1px;
     }
+    h2 {
+      font-size:1.5rem;
+      font-weight:300;
+      color:#bdbdbd;
+      margin-top:10px;
+    }
     section {
       padding:40px 20px;
       max-width:1000px;
@@ -100,7 +106,10 @@
   </nav>
 
   <h1>Portfolio</h1>
-  <p>Valikoituja projekteja ja toteutuksia.</p>
+  <h2>Pinta raapaisu projekteistani</h2>
+  <p style="max-width:600px; margin:auto; color:#bdbdbd;">
+    Osa luonnoksina, osa toteutuneina töinä.
+  </p>
 </header>
 
 <section>
@@ -171,7 +180,7 @@ function openGallery(project) {
   const mainImg = document.getElementById('lightbox-img');
   const thumbs = document.getElementById('gallery-thumbnails');
 
-  lightbox.style.display = 'flex'; // nyt näkyy vain klikattaessa
+  lightbox.style.display = 'flex'; // näkyy vain klikattaessa
   mainImg.src = galleries[project][0];
   thumbs.innerHTML = '';
 
