--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -64,11 +64,10 @@
   </nav>
 
   <h1>Yhteystiedot</h1>
-  <p>Ota yhteyttä AP Arch & Tech -yritykseen alla olevien tietojen avulla.</p>
 </header>
 
 <section>
-  <p><strong>Sähköposti:</strong> ArniP.tmi@outlook.com</p>
+  <p><strong>Sähköposti:</strong> arnip.tmi@outlook.com</p>
   <p><strong>Puhelin:</strong> +358407393105</p>
   <p><strong>Kotipaikkakunta:</strong> Kuopio</p>
   <p><strong>Toimialue:</strong> Suomi</p>
