--- a/projektit.html
+++ b/projektit.html
@@ -135,6 +135,11 @@
       <img src="images/projekti4-main.jpg" alt="Projekti 4">
     </div>
 
+    <!-- Projekti 5 -->
+  <div class="project" onclick="openGallery('projekti5')">
+    <img src="images/projekti5-main.jpg" alt="Projekti 5">
+  </div>
+
   </div>
 </section>
 
@@ -172,6 +177,13 @@ const galleries = {
     "images/projekti4-4.jpg",
     "images/projekti4-5.jpg"
   ]
+    projekti5: [
+    "images/projekti5-main.jpg",
+    "images/projekti5-1.jpg",
+    "images/projekti5-2.jpg",
+    "images/projekti5-3.jpg"
+  ]
+
 };
 
 // LIGHTBOX AVAUTUU VAIN KLIKKAAJALLE
